<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App name -->
    <string name="app_name">Fastrada Mobile</string>

    <!-- Splash activity -->
    <string name="splash_welcome">Welcome to Fastrada Mobile</string>
    <string name="splash_progress_tethering">Enabling hotspot…</string>
    <string name="splash_progress_service">Starting service…</string>
    <string name="splash_start_btn">Start</string>
    <string name="splash_start">Press start to begin…</string>

    <!-- Main activity -->
    <string name="engine_rpm">Revolutions per minute</string>
    <string name="engine_gear">Gear</string>
    <string name="temperature_alarm">Engine temperature</string>

    <!-- Options menu -->
    <string name="end_session">End session</string>
    <string name="new_session">New session</string>
    <string name="settings">Settings</string>
    <string name="gps">Test GPS</string>
    <string name="exit">Exit</string>

    <!--Session activity -->
    <string name="session_details">Session Details</string>
    <string name="session_name">Name: </string>
    <string name="session_track">Track: </string>
    <string name="session_vehicle">Vehicle: </string>
    <string name="session_comment">Comment: </string>
    <string name="session_btn">Submit</string>

    <!-- About activity -->
    <string name="about">Fastrada is a project developed by the Karel De Grote-Hogeschool in Antwerp. You can follow our project\&apos;s progress on Facebook:\nhttps://www.facebook.com/pages/Fastrada/520630621304267\n\nThis app is developed by: \n-Thomas D\&apos;haen\n-Peter Van Akelyen\n-Carlo Vanhoutte\n-Jonathan Heirbaut\n-Philip Vissenaekens\n-Pieter-Jan Pauwels</string>

    <string name="btnStop">Stop GPS</string>
</resources>
