<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/splash_background"
                android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_welcome"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true" android:id="@+id/textView2"/>

    <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/splash_start"
               android:textSize="20sp"
               android:layout_centerHorizontal="true"
               android:layout_below="@+id/textView2"
               android:layout_marginTop="20dp"
               android:id="@+id/textView" />

    <ImageView
        android:src="@drawable/fastradalogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true" android:id="@+id/imageView"/>

    <LinearLayout
        android:id="@+id/start_progress_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_button"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible">

        <ProgressBar
            style="@android:style/Widget.Holo.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/start_progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="14dp"
            android:text="@string/splash_progress_tethering"/>
    </LinearLayout>

    <Button
        android:id="@+id/start_button"
        android:text="@string/splash_start_btn"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>