<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

    <!--LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"-->

    <!-- Track name -->
    <TextView
        android:id="@+id/session_track_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:text="@string/session_track"/>

    <EditText
        android:id="@+id/session_track_input"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"/>

    <!-- Vehicle name -->
    <TextView
        android:id="@+id/session_vehicle_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/session_track_name"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:text="@string/session_vehicle"/>

    <EditText
        android:id="@+id/session_vehicle_input"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/session_track_input"
        android:layout_alignParentRight="true"/>

    <!-- GPS data -->
    <TextView
        android:id="@+id/session_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/session_vehicle_name"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:text="@string/session_gps"/>

    <CheckBox
        android:id="@+id/session_gps_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/session_vehicle_input"
        android:layout_alignParentRight="true"/>

    <!-- Submit -->
    <Button
        android:id="@+id/session_btn"
        android:text="@string/session_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/session_gps"
        android:layout_marginTop="10dp"/>
</RelativeLayout>

